small changes to keep icon fix and remove shifting of nav-bar

--- a/core/css/apps.scss
+++ b/core/css/apps.scss
@@ -18,6 +18,7 @@
 
 /* BASE STYLING ------------------------------------------------------------ */
 // no h1 allowed since h1 = logo
+
 h2 {
 	font-weight: bold;
 	font-size: 20px;
@@ -187,7 +188,7 @@ kbd {
 			&.app-navigation-caption {
 				font-weight: bold;
 				line-height: 44px;
-				padding: 0 15px;
+				padding: 0 44px;
 				white-space: nowrap;
 				text-overflow: ellipsis;
 				box-shadow: none !important;
@@ -245,6 +246,7 @@ kbd {
 			}
 		}
 		/* Menu and submenu */
+
 		> li,
 		> li > ul > li {
 			position: relative;
@@ -259,6 +261,9 @@ kbd {
 				}
 			}
 			/* Main entry link */
+			.settings_nav_item{
+				padding-left: 15px !important;
+			}
 			> a {
 				background-size: 16px 16px;
 				background-position: 14px center;
@@ -281,6 +286,7 @@ kbd {
 				    margin-right: 11px;
 				    width: 16px;
 				    height: 16px;
+						margin-left: 0px;
 				}
 
 				/* counter can also be inside the link */
